packages/jsts/tests/dbd/benchmark/TypeError/T09 Setting getter-only property x/T09-01/fixed.js
const document = {
  getElementById() {
    return {}
  }
}
const mRequestStart = {
  format() {}
}

var in_startDate = document.getElementById("in_startDate")
if (in_startDate) in_startDate.value = mRequestStart.format('YYYY-MM-DD')
